Bug 125197 - Wrong render of text in dialog Tools-Options-LibreOffice Writer-AutoCaption
Summary: Wrong render of text in dialog Tools-Options-LibreOffice Writer-AutoCaption
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, bisected, regression
: 125129 (view as bug list)
Depends on:
Blocks: Options-Dialog-Writer
  Show dependency treegraph
 
Reported: 2019-05-09 20:38 UTC by Roman Kuznetsov
Modified: 2019-05-13 08:40 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
wrong render of text in Options dialog (109.60 KB, image/png)
2019-05-09 20:39 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2019-05-09 20:38:45 UTC
Description:
Wrong render of text in dialog Tools-Options-LibreOffice Writer-AutoCaption

Steps to Reproduce:
1. Open Writer
2. Select Tools->Options
3. In Options dialog select LibreOffice Writer->AutoCaption to left 
4. Look at list on right side (see screenshot)

Actual Results:
Wrong render of text in dialog Tools-Options-LibreOffice Writer-AutoCaption

Expected Results:
text in dialog Tools-Options-LibreOffice Writer-AutoCaption looks fine


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Roman Kuznetsov 2019-05-09 20:39:17 UTC
Created attachment 151276 [details]
wrong render of text in Options dialog
Comment 2 Roman Kuznetsov 2019-05-09 20:41:05 UTC
repro in

Version: 6.3.0.0.alpha0+
Build ID: 65f81f6acdeb03b34033a1c6515618936d5f8eca
CPU threads: 4; OS: Linux 5.0; UI render: default; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-04-23_17:18:14
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded

in windows and with vcl:gtk3 repro too

but doesn't repro in LO 6.2 -> regression
Comment 3 Xisco Faulí 2019-05-09 21:26:17 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=5c32ba63163d9556ff89782a8074924cdf9dc554

author	Caolán McNamara <caolanm@redhat.com>	2019-04-04 14:30:03 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-04-06 19:53:00 +0200
commit 5c32ba63163d9556ff89782a8074924cdf9dc554 (patch)
tree 66acbb3b4c298c9f0cbff75f9e36bf3d759b7a0f
parent 6f31c63e35abef03e6f938bbddc8778b70a62d43 (diff)
weld OTableSubscriptionPage

Bisected with: bibisect-linux64-6.3

Adding Cc: to Caolán McNamara
Comment 4 Commit Notification 2019-05-10 12:52:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/8ccffe4e7fb6abf6fa3ba9187007e9d8af116baf%5E%21

Resolves: tdf#125197 duplicate column checkbox position

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 raal 2019-05-10 21:44:13 UTC
*** Bug 125129 has been marked as a duplicate of this bug. ***
Comment 6 Xisco Faulí 2019-05-13 08:40:01 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 630db80d17616d635cf2e5f1d5a0852428b794a3
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!