Resolves: tdf#125197 duplicate column checkbox position

Change-Id: Ia4424b2be84ece65305bb4e5bed505bed49ebda8
Reviewed-on: https://gerrit.libreoffice.org/72106
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>